I can see metrics

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,10 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "std", "fmt"] }
-tracing-opentelemetry = "0.28"
+actix-web-opentelemetry = { version = "0.20", features = ["metrics"] }
 opentelemetry = "0.27"
 opentelemetry-otlp = "0.27"
-opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
+opentelemetry-stdout = { version = "0.27", features = ["metrics"] }
+opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio-current-thread"] }
 tokio = "1.43.0"
+
