--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ actix-web = "4"
 actix-web-opentelemetry = { version = "0.20", features = ["metrics"] }
 opentelemetry = "0.27"
 opentelemetry-otlp = "0.27"
-opentelemetry-stdout = { version = "0.27", features = ["metrics"] }
+# opentelemetry-stdout = { version = "0.27", features = ["metrics"] }
 opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio-current-thread"] }
 tokio = "1.43.0"
 
