--- a/podman-compose.yaml
+++ b/podman-compose.yaml
@@ -1,4 +1,12 @@
 services:
+  # prometheus:
+  #   container_name: prometheus
+  #   image: prom/prometheus:latest
+  #   volumes:
+  #     - ./prometheus.yaml:/etc/prometheus/prometheus.yml:z
+  #   ports:
+  #     - "9090:9090"
+  #     - "9464:9464"
   collector:
     image: ghcr.io/open-telemetry/opentelemetry-collector-releases/opentelemetry-collector:latest
     command: ["--config=/otel-collector-config.yaml"]
@@ -6,4 +14,5 @@ services:
       - './config.yaml:/otel-collector-config.yaml:z'
     ports:
       - "4317:4317"
-    depends_on: [jaeger-all-in-one]
+      - "8888:8888"
+    # depends_on: [prometheus]
