--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,11 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
-actix-web-opentelemetry = { version = "0.20", features = ["metrics"] }
-opentelemetry = "0.27"
-opentelemetry-otlp = "0.27"
-# opentelemetry-stdout = { version = "0.27", features = ["metrics"] }
-opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio-current-thread"] }
-tokio = "1.43.0"
 
+actix-web-opentelemetry = { version = "0.20", features = ["metrics"] }
+
+opentelemetry = "0.27"
+opentelemetry-otlp = { version = "0.27", features = ["metrics"] }
+opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio-current-thread"] }
+
+tokio = { version = "1.43.0", features = ["full"] }
