--- a/charts/app/templates/pod.yaml
+++ b/charts/app/templates/pod.yaml
@@ -22,5 +22,7 @@ spec:
           env:
             - name: RUST_LOG
               value: "trace"
+            - name: OTEL_EXPORTER_METRICS_TIMEOUT
+              value: "2"
             - name: OTEL_EXPORTER_METRICS_ENDPOINT
               value: {{.Values.collector | quote}}
