--- a/podman-compose.yaml
+++ b/podman-compose.yaml
@@ -1,14 +1,13 @@
 services:
   prometheus:
     container_name: prometheus
-    image: prom/prometheus:latest
+    image: prom/prometheus:v3.1.0
     volumes:
       - ./prometheus.yaml:/etc/prometheus/prometheus.yml:z
     ports:
       - "9090:9090"
-      - "9464:9464"
   collector:
-    image: ghcr.io/open-telemetry/opentelemetry-collector-releases/opentelemetry-collector:latest
+    image: ghcr.io/open-telemetry/opentelemetry-collector-releases/opentelemetry-collector:0.115.1
     command: ["--config=/otel-collector-config.yaml"]
     volumes:
       - './config.yaml:/otel-collector-config.yaml:z'
