--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -4,5 +4,6 @@ global:
 scrape_configs:
   - job_name: 'collector'
     static_configs:
-      - targets: ['collector:9464']
+      - targets: ['collector:9090']
+    honor_labels: true
 
