--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,18 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-web-static-files = "4.0.1"
 actix-web = "4"
-actix-web-opentelemetry = { version = "0.22", features = ["metrics"] }
 env_logger = "0.11"
 log = "0.4"
-opentelemetry = "0.29"
-opentelemetry-otlp = { version = "0.29", features = ["metrics", "grpc-tonic"] }
-opentelemetry-stdout = "0.29"
-opentelemetry_sdk = { version = "0.29", features = ["metrics", "rt-tokio-current-thread"] }
+opentelemetry = "0.30"
+opentelemetry-otlp = { version = "0.30", features = ["metrics", "grpc-tonic"] }
+opentelemetry-stdout = "0.30"
+opentelemetry_sdk = { version = "0.30", features = ["metrics", "rt-tokio-current-thread"] }
+opentelemetry-instrumentation-actix-web = { version = "0.22.0", features = ["metrics"] }
+static-files = "0.2.3"
+
 tokio = { version = "1.44", features = ["full"] }
+
+[build-dependencies]
+static-files = "0.2.3"
